# TitanShift

./: .gitignore  Full System Overview Document v1.0.txt  Orchestrator internal architecture.txt  Planning spec document.txt  README.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.2.2.md  RELEASE_NOTES_0.2.3.md  RELEASE_NOTES_0.2.4.md  RELEASE_NOTES_0.3.2.md  RELEASE_NOTES_0.3.4.md  Tool Module.txt  cleanup_camofox.py  cleanup_registrations.py  docker-compose.observability.yml  harness.config.json  harness.config.local.example.json  pyproject.toml  reddit.txt  reddit_live_smoke.txt  requirements.txt  setup-obscura.bat  start.bat  test_no_camofox.py  test_reddit_scenario.py  test_service_lifecycle.py  test_tool_narrowing.py  verify_camofox_excluded.py
.harness/: memory.db
Testing/: README.md  release_readiness_summary.json
documents/: Emergency Module.txt  Full System Overview Document v1.0.txt  Planning spec document.txt  Repo intake phases.txt  TitanShift vs Claude+Superpowers Deep Dive and Adoption Plan.txt  UI module.txt
frontend/: package-lock.json  package.json
harness/: __init__.py  __main__.py  config_defaults.json
modules/: __init__.py  sample_module.py
release_notes/: RELEASE_NOTES_0.2.1.md  RELEASE_NOTES_0.3.5.md
schemas/: skills_market_index.schema.json
scripts/: e2e_stream_debug.py  engine_sidecar_openclaude.py  engine_sidecar_opencode.py  gen_changelog.py  install_obscura.ps1  lmstudio_emutalk_test.py  poll_task.py  prompt_test.py  run_harness_matrix.py  run_office_pdf_smoke.py  run_release_readiness.py  testing_preflight.py  (+1 more)
tests/: test_load.py  (+11 more)
(+377 files in other folders)
